k8s/polybot_pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      containers:
        - name: server
          image: saeedwh/polybotk8s:22
          ports:
            - containerPort: 8443
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 50Mi
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/is_alive"
              port: 8443
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/is_ready"
              port: 8443

---
apiVersion: v1
kind: Service
metadata:
  name: polybot-service
spec:
  selector:
    app: polybot
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
