k8s/yolo5deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo5bot
spec:
  selector:
    matchLabels:
      app: yolo5bot
  template:
    metadata:
      labels:
        app: yolo5bot
    spec:
      containers:
        - name: server
          image: saeedwh/yolok8s:27
          ports:
            - containerPort: 8778
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/is_alive"
              port: 8778
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/is_ready"
              port: 8778
---
apiVersion: v1
kind: Service
metadata:
  name: yolo5bot
spec:
  selector:
    app: yolo5bot
  ports:
  - name: http
    port: 8778
    targetPort: 8778
