k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saeed--ingress
  namespace: saeed
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - saeed-bot.atech-bot.click
      secretName: saeed-tls-secret


  rules:
    - host: saeed-bot.atech-bot.click
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: polybot-service
              port:
                number: 91
